# Da-Vinci-System-Interface

./: README.md
arduino_script/: arduino_script.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/controller_lib/share/ament_index/resource_index/package_run_dependencies/: controller_lib
install/controller_lib/share/ament_index/resource_index/parent_prefix_path/: controller_lib
install/controller_lib/share/controller_lib/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/controller_lib/share/controller_lib/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  controller_libConfig-version.cmake  controller_libConfig.cmake
install/controller_lib/share/controller_lib/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/manipulator_hw/include/manipulator_hw/: manipulator.hpp
install/manipulator_hw/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: manipulator_hw
install/manipulator_hw/share/ament_index/resource_index/package_run_dependencies/: controller_lib  manipulator_hw
install/manipulator_hw/share/ament_index/resource_index/parent_prefix_path/: controller_lib  manipulator_hw
install/manipulator_hw/share/controller_lib/: local_setup.dsv  package.dsv
install/manipulator_hw/share/controller_lib/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  controller_libConfig-version.cmake  controller_libConfig.cmake
install/manipulator_hw/share/manipulator_hw/: local_setup.bash  local_setup.sh  local_setup.zsh  manipulator.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/manipulator_hw/share/manipulator_hw/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  manipulator_hwConfig-version.cmake  manipulator_hwConfig.cmake
install/manipulator_hw/share/manipulator_hw/config/: manipulator_hw.yaml
install/manipulator_hw/share/manipulator_hw/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/manipulator_hw/share/manipulator_hw/launch/: test_manip_hw.launch.py
install/manipulator_hw/share/manipulator_hw/urdf/: robot.urdf.xacro
log/: latest_build
src/controller_lib/: CMakeLists.txt  package.xml
src/controller_lib/include/controller_lib/: controller_lib.h
src/controller_lib/src/: controller_lib.cpp
src/manipulator_hw/: CMakeLists.txt  manipulator.xml  package.xml
src/manipulator_hw/config/: manipulator_hw.yaml
src/manipulator_hw/include/manipulator_hw/: manipulator.hpp
src/manipulator_hw/launch/: test_manip_hw.launch.py
src/manipulator_hw/src/: manipulator.cpp
src/manipulator_hw/urdf/: robot.urdf.xacro
src/xbox_control/: package.xml  setup.cfg  setup.py
src/xbox_control/xbox_control/: xbox_controller_combo.py  xbox_controller_tool.py  xbox_joint_controller.py
