<?xml version="1.0"?>
<package format="3">
  <name>controller_lib</name>
  <version>0.1.0</version>
  <description>Controller Library package</description>
  <maintainer email="evinia.anasta@gmail.com">Evinia</maintainer>
  <license>Dunno</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>serial_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>