<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manipulator_hw</name>
  <version>0.1.0</version>
  <description>A ROS 2 Control hardware interface for the manipulator of the da Vinci tool</description>
  <maintainer email="evinia.anasta@gmail.com">evinia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>serial_driver</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- the following two might not be needed either -->
  <test_depend>ament_add_gmock</test_depend>
  <test_depend>hardware_interface</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/manipulator.xml"/> 
  </export>
</package>